Iframe issues on mobile improved

--- a/index.css
+++ b/index.css
@@ -124,6 +124,25 @@ a:link{
   overflow-x:hidden; */
   
 }
+.doc-container {
+  position: relative;
+  align-self: center;
+  
+  
+  height: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+.doc-container iframe {
+  /* position: absolute;
+  top: 0;
+  left: 0; */
+  width: 100%;
+  
+  max-width: 816px;
+  max-height: 1056px;
+}
 .header{
   margin-bottom: 20px;
   color: white;
